Fix extra space between block description words

--- a/src/css/inserter-card.scss
+++ b/src/css/inserter-card.scss
@@ -16,7 +16,7 @@
 				.block-editor-block-card__description {
 					display: block !important;
 					padding-top: 8px;
-					text-align: justify;
+					text-align: normal;
 					margin-left: -40px;
 					border-top: 2px solid #eef0f0;
 					margin-top: 10px;
